# learnogl

./: .gitignore  Cargo.toml
src/: glbuffer.rs  input.rs  main.rs  shader.rs
src/ecs/: components.rs  mod.rs
src/game/: mod.rs
src/renderer/: mod.rs
src/shaders/: fragment.glsl  fs.glsl  vertex.glsl  vs.glsl
